<ScrollView	xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/red_background"
	    android:id="@+id/scroll">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:focusableInTouchMode="true"
	    tools:context="it.poliba.giorgiobasile.prescriptionwriter.NewActivity$PlaceholderFragment" >
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/label"
		    android:layout_marginBottom="32dp"
	 	>
		    <ImageView
		        android:id="@+id/prescrView"
		        android:layout_width="70dp"
		        android:layout_height="70dp"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:src="@drawable/prescription_icon"
		        android:layout_marginRight="20dp" />
		    <TextView
		        android:id="@+id/label_prescription"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:fontFamily="sans-serif-light"
		        android:text="@string/new_prescription"
		        
		        android:layout_toRightOf="@id/prescrView"
		        android:textSize="30sp" />
		   </RelativeLayout> 
	 	<Button
		    android:id="@+id/select_patient_button"
	        android:layout_width="wrap_content"
	        android:layout_height="30dp"
		    android:layout_below="@id/label"		
	        android:text="@string/select_patient"
	        android:textAllCaps="true"
	        android:textSize="12sp"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:layout_marginBottom="20dp"
	        android:textColor="@android:color/white"
	        android:background="@android:color/holo_red_light"
	        android:gravity="left|center_vertical"
		    />
		<TextView
	        android:id="@+id/label_name"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:text="@string/name"
	        android:textAllCaps="true"
	        android:layout_below="@id/select_patient_button"
	        android:textSize="14sp"
	        /> 
	    <TextView
	        android:id="@+id/name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:ems="10"
	        android:textSize="20sp"
	        android:layout_below="@id/label_name" 
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp"
	        android:fontFamily="sans-serif-condensed">
	    </TextView>
	    <TextView
	        android:id="@+id/label_surname"
	        android:layout_marginTop="10dp"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:text="@string/surname"
	        android:textAllCaps="true"
	        android:layout_below="@id/name"
	        android:textSize="14sp"
	        /> 
		<TextView
	        android:id="@+id/surname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:ems="10"
	        android:textSize="20sp"
	        android:fontFamily="sans-serif-condensed"
	        android:layout_below="@id/label_surname" 
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp">
	    </TextView>
		<TextView
	        android:id="@+id/label_taxcode"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
	        android:text="@string/tax_code"
	        android:textAllCaps="true"
	        android:layout_below="@id/surname"
	        android:textSize="14sp"
	        /> 
		<TextView
	        android:id="@+id/taxcode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:ems="10"
	        android:layout_below="@id/label_taxcode"
	        android:maxLength="16"
	        android:textSize="20sp"
	        android:singleLine="true"
	        android:textAllCaps="true"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp" 
	        android:fontFamily="sans-serif-condensed"/>
		<TextView
	        android:id="@+id/label_prescr"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:text="@string/prescription"
	        android:textAllCaps="true"
	        android:layout_below="@id/taxcode"
	        android:textSize="14sp"
	        android:paddingBottom="20dp"
	        /> 
		<LinearLayout
		    android:id="@+id/new_presc"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_below="@id/label_prescr">
		</LinearLayout>    
		<Button
		    android:id="@+id/new_presc_button"
	        android:layout_width="wrap_content"
	        android:layout_height="30dp"
		    android:layout_below="@id/new_presc"		
	        android:text="@string/new_presc"
	        android:textSize="12sp"
	        android:textColor="@android:color/holo_red_light"
	        android:background="@drawable/card_layout"
	        android:gravity="left|center_vertical"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:textAllCaps="true"
		    />
	</RelativeLayout>
</ScrollView>