<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
	 <EditText
        android:id="@+id/filter"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:inputType="text"
    	android:hint="@string/filter"
    	android:paddingBottom="10dp"
    	/>
    <ListView
        android:id="@+id/listView1"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="0dp" >
    </ListView>
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@color/dark_grey"
	    />
	<LinearLayout
	    
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="10dp"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:orientation="horizontal">
	    
	    <TextView
	        android:id="@+id/label_quantity"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/quantity"
	    	android:layout_gravity="center"
	    	android:paddingRight="10dp"
	    	android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
	    
	    <EditText
	        android:id="@+id/quantity"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:inputType="number"
	    	android:layout_gravity="center"
	    	android:text="1"
	    	/>
	    
	    
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:orientation="horizontal">    
		<TextView
		    android:id="@+id/label_assumption"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/assumption"
	    	android:layout_gravity="center"
	    	android:paddingRight="10dp"
	    	android:textAppearance="?android:attr/textAppearanceListItemSmall"	    	
	    	/>
		    
	    <EditText
	        android:id="@+id/assumption"
	        android:inputType="textMultiLine"
	        android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:layout_gravity="center"
	    	android:lines="3"
	    	
	    	/>
	</LinearLayout>	    
</LinearLayout>
