<ScrollView	xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/red_background"
	    android:id="@+id/scroll">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:focusableInTouchMode="true"
	    tools:context="it.poliba.giorgiobasile.prescriptionwriter.NewActivity$PlaceholderFragment" >
		 <RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/label"
		    android:layout_marginBottom="32dp"
	 	>
		   
			<ImageView
		        android:id="@+id/thermoView"
		        android:layout_width="70dp"
		        android:layout_height="70dp"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:src="@drawable/thermo_icon"
		        android:layout_marginRight="20dp" />
		    <TextView
		        android:id="@+id/label_patient"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:fontFamily="sans-serif-light"
		        android:text="@string/new_patient"
		        android:layout_centerVertical="true"
		        android:textSize="30sp"
		        android:layout_toRightOf="@id/thermoView" />
	 	</RelativeLayout>
		<TextView
	        android:id="@+id/label_name"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:text="@string/name"
	        android:textAllCaps="true"
	        android:layout_below="@id/label"
	        android:textSize="14sp"
	        /> 
	    <EditText
	        android:id="@+id/name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:ems="10"
	        android:fontFamily="sans-serif-condensed"
	        android:inputType="textPersonName"
	        android:layout_below="@id/label_name" 
	        android:layout_marginBottom="10dp">
	    </EditText>
	    <TextView
	        android:id="@+id/label_surname"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:text="@string/surname"
	        android:textAllCaps="true"
	        android:layout_below="@id/name"
	        android:textSize="14sp"
	        /> 
		<EditText
	        android:id="@+id/surname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:ems="10"
	        android:inputType="textPersonName"
	        android:layout_below="@id/label_surname" 
	        android:layout_marginBottom="10dp"
	        android:fontFamily="sans-serif-condensed"
	        >
	    </EditText>
		<TextView
	        android:id="@+id/label_taxcode"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:text="@string/tax_code"
	        android:textAllCaps="true"
	        android:layout_below="@id/surname"
	        android:textSize="14sp"
	        /> 
		<EditText
	        android:id="@+id/taxcode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:ems="10"
	        android:inputType="textCapCharacters|textNoSuggestions|textVisiblePassword"
	        android:layout_below="@id/label_taxcode"
	        android:maxLength="16"
	        android:singleLine="true"
	        android:layout_marginBottom="10dp"
	        android:fontFamily="sans-serif-condensed"
	         />
		
	</RelativeLayout>
</ScrollView>